; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_agg.c_cmp_list_len_asc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_agg.c_cmp_list_len_asc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @cmp_list_len_asc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_list_len_asc(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @lfirst(i32* %7)
  %9 = inttoptr i64 %8 to i32*
  %10 = call i32 @list_length(i32* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @lfirst(i32* %11)
  %13 = inttoptr i64 %12 to i32*
  %14 = call i32 @list_length(i32* %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp sgt i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %25

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp eq i32 %20, %21
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 0, i32 -1
  br label %25

25:                                               ; preds = %19, %18
  %26 = phi i32 [ 1, %18 ], [ %24, %19 ]
  ret i32 %26
}

declare dso_local i32 @list_length(i32*) #1

declare dso_local i64 @lfirst(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
